--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,9 @@ version = 0.0.1-dev
 
 [options]
 install_requires =
-  requests
+  beautifulsoup4
   cachecontrol[filecache]
+  requests
   urllib3
 
 [options.entry_points]
